force-app/main/default/objects/PUD_Job_Dispatch_Event__e/PUD_Job_Dispatch_Event__e.object-meta.xml
<CustomObject>
    <description>Events generated by external Job Dispatch system (MobileSTAR) during the process of dispatching Jobs to resources.</description>
    <label>PUD Job Dispatch Event</label>
    <pluralLabel>PUD Job Dispatch Events</pluralLabel>
</CustomObject>