force-app/main/default/objects/PUD_Job_Dispatch_Event__e/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>Additional comments entered by the assigned resource(e.g. driver). May contain multiple lines.</description>
    <label>Comments</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>