force-app/main/default/objects/PUD_Job_Dispatch_Event__e/fields/Containers_Payload__c.field-meta.xml
<CustomField>
    <fullName>Containers_Payload__c</fullName>
    <description>This field is populated by MobileStar and Tibco to store actual numbers against containers for a job.</description>
    <label>Containers Payload</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>