force-app/main/default/objects/PUD_Job_Dispatch_Event__e/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Type of event such as &apos;Status Update&apos;</description>
    <label>Type</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>